--- a/cate_dan_viet_talk.html
+++ b/cate_dan_viet_talk.html
@@ -114,7 +114,7 @@
       </div>
       <!-- end header talk pc-->
       <!-- header talk mb -->
-      <div class="d-2xl-none d-sm-block">
+      <div class="header-talk-mb-wrapper d-2xl-none d-sm-block">
         <!-- nav -->
         <div class="header-talk-mb">
           <a href="/" title="Trang chủ">
