--- a/detail.html
+++ b/detail.html
@@ -91,6 +91,7 @@
       rel="stylesheet"
       href="./lib/font-awesome/fontawesome-free-5.15.4-web/css/all.min.css"
     />
+    <link rel="stylesheet" href="./lib/fancybox/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
   </head>
@@ -3047,6 +3048,7 @@
             <div class="contain leftSidebar-1">
                <!-- detail main -->
                <div class="detail-main font-noto">
+                    <div class="sticky-start"></div>
                     <!-- title -->
                     <h1 class="detail-title fs-24 mb-10 fw-700">Kỳ lân công nghệ đầu tiên của Việt Nam VNG gây bất ngờ với lợi nhuận bết bát trước thềm niêm yết</h1>
                     <!-- end title -->
@@ -3108,7 +3110,7 @@
                         VNG của "bang chủ" Lê Hồng Minh lỗ 254,5 tỷ đồng tỷ đồng trong quý III, đây là quý thứ 4 liên tiếp, VNG ghi nhận lợi nhuận âm. Trong kỳ, VNG rót 1.273 tỷ đồng tỷ vào các công ty liên kết, tuy nhiên các công ty này lại mang về cho công ty khoản lỗ lũy kế lên tới hơn 600 tỷ đồng. 
                     </div>
                     <!-- end sapo -->
-                    <div class="sticky-start"></div>
+                    
                     <!-- line share -->
                     <div class="line-share">
                         <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="button" data-action="like" data-size="small" data-share="true"></div>
@@ -3151,7 +3153,9 @@
                         <h3>VNG của ông Lê Hồng Minh làm ăn ra sao trước thềm niêm yết?</h3>
                         <p>Trước thềm niêm yết, Công ty Cổ phần VNG của "bang chủ" Lê Hồng Minh ghi nhận kết quả kém tích cực về hoạt động kinh doanh và đầu tư.</p>
                         <figure class="expNoEdit">
+                          <a data-fancybox="gallery" href="./images/2.jpg" data-caption="VNG từng dự kiến IPO tại Mỹ. Ảnh Vneconomy">
                             <img src="./images/2.jpg" alt="">
+                          </a>
                             <figcaption>
                               <h2 class="expEdit">
                                 <em>VNG từng dự kiến IPO tại Mỹ. Ảnh Vneconomy</em>
@@ -4476,7 +4480,28 @@
     <script src="./lib/font-awesome/fontawesome-free-5.15.4-web/js/fontawesome.min.js"></script>
     <script src="./js/ResizeSensor.js"></script>
     <script src="./js/theia-sticky-sidebar.js"></script>
+    <script src="./lib/fancybox/jquery.fancybox.min.js"></script>
     <script src="./js/main.js"></script>
-   
+    <script>
+      // function getSize() {
+      //   size = $( ".js_change_size" ).css("font-size" );
+      //   size = parseInt(size, 10);
+      //   console.log(size)
+      // }
+      // getSize();
+      // $( ".size-plus" ).on( "click", function() {
+      //   if ((size + 1) <= 18) {
+      //     $( "js_change_size" ).css( "font-size", "+=2");
+      //     console.log(size)
+      //   }
+      // });
+
+      // $( "#down" ).on( "click", function() {
+      //   if ((size - 2) >= 12) {
+      //     $( "h1" ).css( "font-size", "-=2" );
+      //   }
+      // });
+    </script>
+
   </body>
 </html>
