--- a/cate_dan_viet_talk.html
+++ b/cate_dan_viet_talk.html
@@ -91,6 +91,7 @@
       rel="stylesheet"
       href="./lib/font-awesome/fontawesome-free-5.15.4-web/css/all.min.css"
     />
+    <link rel="stylesheet" href="./lib/fancybox/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
   </head>
@@ -942,6 +943,7 @@
     <script src="./lib/font-awesome/fontawesome-free-5.15.4-web/js/fontawesome.min.js"></script>
     <script src="./js/ResizeSensor.js"></script>
     <script src="./js/theia-sticky-sidebar.js"></script>
+    <script src="./lib/fancybox/jquery.fancybox.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
