--- a/cate.html
+++ b/cate.html
@@ -1892,7 +1892,7 @@
     <!-- header -->
     <header id="header">
       <!-- pc -->
-      <div class="d-2xl-block d-sm-none">
+      <div class="d-2xl-block d-lg-none">
         <!-- header top -->
         <div class="header-top w-980">
           <div class="subsite">
@@ -2845,7 +2845,7 @@
       </div>
       <!-- end pc -->
       <!-- mb -->
-      <div id="header-mb" class="clearafter d-2xl-none d-sm-block">
+      <div id="header-mb" class="clearafter d-2xl-none d-lg-block">
         <div class="wrapper px-20 header-mb">
           <div class="left">
             <span
@@ -2967,7 +2967,7 @@
       <!-- end main top -->
       
       <!-- main block -->
-      <div class="main-block">
+      <div class="main-block cate-block">
         <div class="w-980">
           <!-- breadcum -->
           <div class="breadcum d-sm-none">
