--- a/cate_dan_viet_talk.html
+++ b/cate_dan_viet_talk.html
@@ -100,7 +100,7 @@
     <!-- header -->
     <header id="header">
       <!-- header talk pc-->
-      <div class="header-talk d-sm-none">
+      <div class="header-talk d-lg-none">
         <div class="headerother active">
           <a href="/" class="back-home fs-14"><i class="icondv icon-back"></i>Trở về trang chủ</a>
           <div class="wrapper">
@@ -115,7 +115,7 @@
       </div>
       <!-- end header talk pc-->
       <!-- header talk mb -->
-      <div class="header-talk-mb-wrapper d-2xl-none d-sm-block">
+      <div class="header-talk-mb-wrapper d-2xl-none d-lg-block">
         <!-- nav -->
         <div class="header-talk-mb">
           <a href="/" title="Trang chủ">
