--- a/detail_image.html
+++ b/detail_image.html
@@ -454,7 +454,7 @@
         <!-- contain -->
         <div class="contain leftSidebar-1">
           <!-- tin cùng chuyên mục -->
-          <div class="box_samecate">
+          <div class="box-samecat">
             <!-- heading -->
             <div class="sc-heading mb-15 py-15">
               <h3 class="fs-20 fw-700 text-green-008">Tin Cùng Chuyên Mục</h3>
