--- a/index.html
+++ b/index.html
@@ -1892,7 +1892,7 @@
     <!-- header -->
     <header id="header">
       <!-- pc -->
-      <div class="d-2xl-block d-sm-none">
+      <div class="d-2xl-block d-lg-none">
         <!-- header top -->
         <div class="header-top w-980">
           <div class="subsite">
@@ -2845,7 +2845,7 @@
       </div>
       <!-- end pc -->
       <!-- mb -->
-      <div id="header-mb" class="clearafter d-2xl-none d-sm-block">
+      <div id="header-mb" class="clearafter d-2xl-none d-lg-block">
         <div class="wrapper px-20 header-mb">
           <div class="left">
             <span
