--- a/detail.html
+++ b/detail.html
@@ -3425,7 +3425,7 @@
                           <select data-select="year"><option value="2022">2022</option><option value="2021">2021</option><option value="2020">2020</option><option value="2019">2019</option><option value="2018">2018</option><option value="2017">2017</option><option value="2016">2016</option><option value="2015">2015</option><option value="2014">2014</option><option value="2013">2013</option></select>
                           <a class="linkcate" href="javascript:;" rel="nofollow">Xem</a>
                       </div>
-                      <script> 
+                      <!-- <script> 
                           (runinit = window.runinit || []).push(function () {
                               var $sameDate = $('.date-select');
                       
@@ -3510,7 +3510,7 @@
                                   }
                               });
                           });
-                      </script>
+                      </script> -->
                         
                     </div>
                     <!-- end heading -->
