--- a/index.html
+++ b/index.html
@@ -6176,6 +6176,274 @@
                 <!--  -->
               </div>
               <!-- end 2 -->
+
+              <!-- bot -->
+              <div class="home-boxnewday d-sm-none box-bot">
+                <!-- left -->
+                <div class="boxbot-left">
+                  <!-- heading -->
+                  <h2 class="boxnews-left-heading fs-20 mb-10 text-green-008">
+                    <a href="#" class="fw-700">Doanh nghiệp</a>
+                  </h2>
+                  <!-- end heading -->
+
+                  <!-- container -->
+                  <div class="boxnews-container">
+                    <!-- large -->
+                    <div class="boxnews-large">
+                      <!-- img -->
+                      <div class="hightlight-bot-img">
+                        <div class="">
+                          <div class="thumb-img border-5">
+                            <a href="#" class="thumb-item thumb-5x3">
+                              <img class="" src="./images/4.jpg" alt=""
+                            /></a>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end img -->
+                      <!-- title -->
+                      <h3 class="boxnews-large-title fs-18 mt-15 mb-10">
+                        <a href="#" class="fw-700"
+                          >Kể chuyện làng: Cầu khỉ ơi!</a
+                        >
+                      </h3>
+                      <p class="boxnews-large-des fs-13 text-gray-6c">
+                        Tầm tuổi tôi, dường như bất kỳ đứa trẻ miền Tây nào cũng
+                        lớn lên từ những lời ru. Hồi ấy, tía má tôi đi máy tuốt
+                        lúa quanh năm chạy đồng xa nhà, những giấc ngủ trưa của
+                        tôi ấp ủ đầy tiếng ru của bà nội.
+                      </p>
+                      <!-- end title -->
+                    </div>
+                    <!-- end large -->
+
+                    <!-- small -->
+                    <ul class="boxnewsleft-small">
+                      <li class="item fs-14 fw-500" data-icontype="16">
+                        <h3>
+                          <a
+                            title="Kể chuyện làng: Kỷ vật của thầy giáo làng"
+                            class="title"
+                            href="#"
+                            >Kể chuyện làng: Kỷ vật của thầy giáo làng</a
+                          >
+                        </h3>
+                      </li>
+                      <li class="item fs-14 fw-500" data-icontype="16">
+                        <h3>
+                          <a
+                            title="Kể chuyện làng: Kỷ vật của thầy giáo làng"
+                            class="title"
+                            href="#"
+                            >Kể chuyện làng: Kỷ vật của thầy giáo làng</a
+                          >
+                        </h3>
+                      </li>
+                    </ul>
+                    <!-- end small -->
+                  </div>
+                  <!-- end container -->
+                </div>
+                <!-- end left -->
+                <!-- right -->
+                <div class="boxbot-right">
+                  <!-- item -->
+                  <div class="boxbot-right-block">
+                    <h3 class="title-top">
+                      <i class="icondv icon-ttvbig"></i>
+                      <a title="" class="title" href="#">Trang Trại Việt</a>
+                    </h3>
+                    <div class="boxbot-right-container">
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                    </div>
+                    
+                  </div>
+                  <!-- end item -->
+                  <!-- item -->
+                  <div class="boxbot-right-block">
+                    <h3 class="title-top">
+                      <i class="icondv icon-etimebig"></i>
+                      <a title="Etime" class="title" href="#">Etime</a>
+                    </h3>
+                    <div class="boxbot-right-container">
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                      <!--  -->
+                      <div class="boxbot-right-item">
+                        <div class="boxbot-right-img">
+                          <div class="">
+                            <div class="thumb-img border-5">
+                              <a href="#" class="thumb-item thumb-5x3">
+                                <img class="" src="./images/4.jpg" alt=""></a>
+                            </div>
+                          </div>
+                        </div>
+                        <h4 class="boxbot-right-title fs-13 text-gray-6c fix-text2">
+                          <a href="#" class="fw-500">Thị trường trái phiếu doanh nghiệp khiến chuyên gia
+                            "kinh ngạc", Bộ Tài chính không thể chối bỏ trách
+                            nhiệm</a>
+                        </h4>
+                      </div>
+                      <!--  -->
+                    </div>
+                    
+                  </div>
+                  <!-- end item -->
+                </div>
+                <!-- end right -->
+              </div>
+              <!-- end bot -->
             </div>
             <!-- end left -->
             <!-- right -->
