--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
       rel="stylesheet"
       href="./lib/slick/slick-1.8.1/slick/slick-theme.css"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="./lib/font-awesome/fontawesome-free-5.15.4-web/css/all.min.css"
-    />
+    /> -->
     <link rel="stylesheet" href="./lib/fancybox/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/responsive.css" />
   </head>
 
   <body>
@@ -1894,7 +1893,7 @@
       <!-- pc -->
       <div class="d-2xl-block d-lg-none">
         <!-- header top -->
-        <div class="header-top w-980">
+        <div class="header-top w-1140">
           <div class="subsite">
             <a
               class="item etime"
@@ -1989,7 +1988,7 @@
         <!-- end header top -->
 
         <!-- header bot -->
-        <div class="header-bot w-980">
+        <div class="header-bot w-1140">
           <div class="logo">
             <h1>
               <a class="logo-img" href="/" title="Dân Việt">
@@ -2012,7 +2011,7 @@
         <!-- end header bot -->
 
         <!-- hot navbar -->
-        <div id="HotNav" class="w-980">
+        <div id="HotNav" class="w-1140">
           <ul>
             <li>
               <a title="Nhịp cầu nhân ái" href="#">
@@ -2976,7 +2975,7 @@
       <!--  -->
       <!-- main block -->
       <div class="main-block">
-        <div class="w-980">
+        <div class="w-1140">
           <!-- main secondary -->
           <div class="main-secondary main-col-2 d-sm-block">
             <!-- contain -->
@@ -6781,7 +6780,7 @@
     <!-- footer -->
     <footer id="footer" class="footer">
       <!-- back top -->
-      <div id="back-top"><i class="fas fa-arrow-up text-white"></i></div>
+      <div id="back-top"><img src="./images/svg/arrow-up-w.svg" alt="" class="icon"></div>
       <!-- end back top -->
       <!-- pc -->
       <div class="wrapper d-sm-none">
@@ -7285,7 +7284,7 @@
     <!-- end footer sticky mobile -->
     <script src="./lib/jquery/jquery.js"></script>
     <script src="./lib/slick/slick-1.8.1/slick/slick.min.js"></script>
-    <script src="./lib/font-awesome/fontawesome-free-5.15.4-web/js/fontawesome.min.js"></script>
+    <!-- <script src="./lib/font-awesome/fontawesome-free-5.15.4-web/js/fontawesome.min.js"></script> -->
     <script src="./js/ResizeSensor.js"></script>
     <script src="./js/theia-sticky-sidebar.js"></script>
     <script src="./lib/fancybox/jquery.fancybox.min.js"></script>
